--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "library",
 	"license": "MIT",
 	"require": {
-		"php": "~7.1",
+		"php": ">=7.1",
 		"nette/http": "~3.0"
 	},
 	"require-dev": {
