--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 		"nette/http": "~3.0"
 	},
 	"require-dev": {
-		"phpstan/phpstan-shim": "~0.9",
+		"phpstan/phpstan": "^0.12",
 		"mangoweb/tester-infrastructure": "@dev"
 	},
 	"autoload": {
