--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,14 @@
 name: "build"
 
 on:
-  - pull_request
-  - push
+  pull_request:
+    paths-ignore:
+      - ".docs/**"
+  push:
+    branches:
+      - "*"
+  schedule:
+    - cron: "0 8 * * 1" # At 08:00 on Monday
 
 env:
   cache-version: "1"
@@ -65,4 +71,4 @@ jobs:
         run: "${{ env.composer-install }}"
 
       - name: "PHPStan"
-        run: "vendor/bin/phpstan analyse --configuration phpstan.neon --level 7 src/"
+        run: "vendor/bin/phpstan analyse --configuration phpstan.neon --level 8 src/"
