added coding standards

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,5 +70,8 @@ jobs:
       - name: "Install dependencies"
         run: "${{ env.composer-install }}"
 
+      - name: "Coding standards"
+        run: vendor/bin/codesniffer src
+
       - name: "PHPStan"
         run: "vendor/bin/phpstan analyse --configuration phpstan.neon --level 8 src/"
