--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   tests:
-    name: "Static analysis"
+    name: "Tests"
     runs-on: "${{ matrix.operating-system }}"
 
     strategy:
