composer: use stable packages versions

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	"require-dev": {
 		"ninjify/qa": "^0.13",
 		"phpstan/phpstan": "^1.0",
-		"webnazakazku/mango-tester-infrastructure": "dev-master"
+		"webnazakazku/mango-tester-infrastructure": "^0.6"
 	},
 	"autoload": {
 		"classmap": [
