--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "webnazakazku/mango-tester-http-mocks",
+	"description": "",
 	"type": "library",
 	"license": "MIT",
 	"repositories": [
@@ -9,11 +10,11 @@
 		}
 	],
 	"require": {
-		"php": ">=7.1",
-		"nette/http": "~3.0"
+		"php": ">=8.1",
+		"nette/http": "~3.3.0"
 	},
 	"require-dev": {
-		"ninjify/qa": "^0.13",
+		"contributte/qa": "^0.3",
 		"phpstan/phpstan": "^1.0",
 		"webnazakazku/mango-tester-infrastructure": "^0.6"
 	},
@@ -21,5 +22,10 @@
 		"classmap": [
 			"src/"
 		]
+	},
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	}
 }
