--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,2 @@
 parameters:
-    ignoreErrors:
-        - "#^Return type \\(void\\) of method Webnazakazku\\\\MangoTester\\\\HttpMocks\\\\Session\\:\\:setHandler\\(\\) should be compatible with return type \\(static\\(Nette\\\\Http\\\\Session\\)\\) of method Nette\\\\Http\\\\Session\\:\\:setHandler\\(\\)$#"
+    ignoreErrors: []
